@@ -95,7 +95,7 @@ COMMON_MODULES="gtk+-2.0 >= 2.3.0 dnl
  libglade-2.0 >= 2.0.0 dnl
  libbonobo-2.0 dnl
  libbonoboui-2.0 dnl
- gnome-desktop-2.0 >= 2.2.0"
+ gnome-desktop-2.0 >= 2.21.4"
 PKG_CHECK_MODULES(LIBSLAB, $COMMON_MODULES gnome-desktop-2.0 librsvg-2.0 libgnome-menu pango eel-2.0)
 PKG_CHECK_MODULES(CAPPLET, $COMMON_MODULES)
 PKG_CHECK_MODULES(GNOMECC, $COMMON_MODULES libgnome-menu >= 2.10.1 libpanelapplet-2.0)
@@ -518,10 +518,10 @@ capplets/sound/Makefile
 capplets/sound/gnome-settings-sound.desktop.in
 capplets/windows/Makefile
 capplets/windows/window-properties.desktop.in
-#gnome-settings-daemon/Makefile
-#gnome-settings-daemon/actions/Makefile
-#gnome-settings-daemon/gnome-settings-daemon.pc
-#gnome-settings-daemon/xrdb/Makefile
+gnome-settings-daemon/Makefile
+gnome-settings-daemon/actions/Makefile
+gnome-settings-daemon/gnome-settings-daemon.pc
+gnome-settings-daemon/xrdb/Makefile
 help/Makefile
 libbackground/Makefile
 libslab/Makefile
