@@ -9,5 +9,4 @@ INCLUDES = \
 noinst_LTLIBRARIES = libbackground.la
 
 libbackground_la_SOURCES = \
-	applier.c	applier.h	\
 	preferences.c	preferences.h
