@@ -1,3 +1,7 @@
+2008-01-14  Soren Sandmann  <sandmann@daimi.au.dk>
+
+	* gnome-settings-background.c: Use GnomeBG from gnome-desktop
+
 2008-01-14  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-settings-mouse.c:
