@@ -1,3 +1,9 @@
+2008-01-14  Soren Sandmann <sandmann@daimi.au.dk>
+
+	* applier.[ch]: Delete these files
+
+	* Makefile.am: Remove them here.
+
 2007-04-16  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Erich Schubert <erich@debian.org>
