@@ -1,3 +1,13 @@
+2008-01-14  Soren Sandmann  <sandmann@redhat.com>
+
+	* appearance-desktop.c: Update list model when the background
+	changes. 
+	* gnome-wp-item.c: Create a GnomeBG for the item.
+	* gnome-wp-item.h: Add a GnomeBG field - Remove
+	gnome_wp_item_dup() function.
+	* gnome-wp-info.c: Delete gnome_wp_item_dup() function.
+	* gnome-wp-xml.c: Ensure that a GnomeBG exists.
+
 2007-12-22  Thomas Wood  <thos@gnome.org>
 
 	* theme-installer.c: (transfer_done_tgz_tbz),
